--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-cli": "^2.0.15"
   },
   "dependencies": {
     "angular": "^1.6.3",
     "body-parser": "^1.17.2",
+    "bootstrap": "^4.1.0",
     "ejs": "^2.5.9",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
     "mysql": "^2.13.0",
     "react": "^15.6.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^15.6.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.0-rc.2"
